# P4P-Team44

./: .gitignore
top(1)_project/: qar_info.json  readme.txt  top.qarlog  top.qp_info
top(1)_project/hw/: PE.vhd  SysArray.vhd  assignment_defaults.qdf  jtag.sdc  nvmm.vhd  nvmm2.vhd  nvmm3.vhd  nvmm_hw.tcl  nvmm_hw.tcl~  sys.qsys  sys.qsys.legacy  top.ipregen.rpt  top.qpf  top.qsf  top.restore.rpt  top.sdc  top.v
top(1)_project/hw/.qsys_edit/: preferences.xml  sys.xml
top(1)_project/hw/sys/: sys.bsf  sys.cmp  sys.html  sys.qgsynthc  sys.qip  sys.regmap  sys.sopcinfo  sys.xml  sys_bb.v  sys_generation_previous.rpt  sys_inst.v  sys_inst.vhd
top(1)_project/hw/sys/synth/: sys.v  (+1 more)
top(1)_project/ready_to_test/: app_freertos.elf  app_hal.elf  app_ucosii.elf
top(1)_project/scripts/: a10_hw_proj.tcl  build_sof.py  sys.tcl
top(1)_project/sw/: .gitignore
top(1)_project/sw/app_hal/: .cproject  .project  CMakeLists.txt  hello.c
top(1)_project/sw/app_hal/custom_instructions/: custom_instruction.h  load_bias.h  load_conv_in.h
top(1)_project/sw/big_bsp/: CMakeLists.txt  alt_sys_init.c  custom_instruction_debug.xml  linker.h  linker.x  memory.gdb  settings.bsp  summary.html  system.h
top(1)_project/sw/deeznuts_bsp/: alt_sys_init.c  custom_instruction_debug.xml  linker.h  linker.x  memory.gdb  settings.bsp  summary.html  system.h  temp-export-settings-anchor.bsp
top(1)_project/sw/delay_bsp/: settings.bsp
top(1)_project/sw/new_bsp/: alt_sys_init.c  linker.h  linker.x  memory.gdb  settings.bsp  summary.html  system.h  temp-export-settings-anchor.bsp  toolchain.cmake
(+62 files in other folders)
